--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,14 +8,19 @@
     <link rel="stylesheet" type="text/css" href="/css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
-<body>
+<body oncontextmenu="return false" ondragstart="return false" onselectstart="return false">
     <header>
         <a href="#" class="logo">TJEBOT</a>
         <ul>
             <li><a href="#" class="active">HOME</a></li>
             <li><a href="/service">SERVICE</a></li>
             <li><a href="/notice">NOTICE</a></li>
-            <li><a href="/login" id="login">LOGIN</a></li>
+            <% if ( isLogin == true ) { %>
+                <li><a href="/logout">LOGOUT</a></li>
+            <% } else { %>
+                <li><a href="/login" id="login">LOGIN</a></li>
+            <% } %>
+            
         </ul>
 
     </header>
@@ -28,12 +33,12 @@
         <img src="/imgs/mountains_front.png" id="mountains_front">
     </section>
     <div class="sec" id="sec">
-        <h2>씨발 봇은</h2>
+        <h2>더조은 봇은</h2>
         <p>
             
-            Web 3.0 팀들과 암호화폐 인플루언서들의 트위터 게시글을 업로드하는 즉시 실시간으로 한글 번역하여 메신저로 전송합니다.
+            Web 3.0 팀들과 암호화폐 인플루언서들의 트위터 게시글을 업로드하면 실시간으로 번역하여 메신저로 전송합니다.
             <br><br>
-            바이낸스, FTX, 업비트와 같은 대형 거래소들의 공지사항을 영어일 경우 한글로 번역하여 메신저로 전송합니다.
+            바이낸스, FTX, 업비트와 같은 대형 거래소들의 공지사항을 번역하여 메신저로 전송합니다.
             <br><br>
             암호화폐가 거래소에 상장되기 전 지갑이 생성되는 것을 감지해 상장 정보를 가장 빠르게 받을 수 있습니다.
             <br><br>
@@ -47,44 +52,7 @@
     </div>
     
 
-    <script>
-        let stars = document.getElementById('stars');
-        let moon = document.getElementById('moon');
-        let mountains_behind = document.getElementById('mountains_behind');
-        let text = document.getElementById('text');
-        let btn = document.getElementById('btn');
-        let mountains_front = document.getElementById('mountains_front');
-        let header = document.querySelector('header');
-        
-        let login = document.getElementById('login');
-        let logout = document.getElementById('logout');
-
-        // let xhr=new XMLHttpRequest();
-        // let isLogin = JSON.parse(xhr.responseText);
-
-        // console.log(isLogin.isLogin);
-        // if(isLogin.isLogin==='true') {
-        //     $("#login").hide();
-        //     $("#logout").show();
-        // }else {
-        //     $("#login").show();
-        //     $("#logout").hide();
-        // }
-
-        window.addEventListener('scroll', function(){
-            let value = window.scrollY;
-            stars.style.left = value * 0.25 + 'px';
-            moon.style.top = value * 1.05 + 'px';
-            mountains_behind.style.top = value * 0.5 + 'px';
-            mountains_front.style.top = value * 0 + 'px';
-            text.style.marginRight = value * 4 + 'px';
-            text.style.marginTop = value * 1.5 + 'px';
-            btn.style.marginTop = value * 1.5 + 'px';
-            header.style.top = value * 0.5 + 'px';
-            moon.style.transform = "rotate(" + window.pageYOffset/7 + "deg)";
-            
-        });
-    </script>
+    <script src="/js/index.js"></script>
 </body>
 
 </html>
