회원 정보 수정 완성

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,8 @@
 </head>
 <body oncontextmenu="return false" ondragstart="return false" onselectstart="return false">
     <header>
-        <a href="#" class="logo">TJEBOT</a>
+        <!-- <a href="#" class="logo">TJEBOT</a> -->
+        
         <ul>
             <li><a href="#" class="active">HOME</a></li>
             <li><a href="/service">SERVICE</a></li>
