--- a/views/adminMember.ejs
+++ b/views/adminMember.ejs
@@ -15,10 +15,10 @@
             <hr>
             <% for(let datas of data) { %>
             <div class="container">
-                <div class="label"><%=datas.id%></div>
-                <div class="content">이름 : <%=datas.name%> | 휴대폰 번호 : <%=datas.phoneNum%> <br> 결제 상태 : <%=datas.payStatus%> | 메신저 아이디 : <%=datas.smsId%> <br> 
-                메신저 종류 : <%=datas.kindSns%> | 권한 : <%=datas.permission%> <br> 가입일 : <%=datas.registDate%> | 
-                수신동의 : <%=datas.sendAgree%> <br> 생일 : <%=datas.birth%> | <button onclick="window.location='/adminMemberEdit'"></button>
+                <div class="label"><%=datas.user_id%></div>
+                <div class="content">이름 : <%=datas.user_name%> | 휴대폰 번호 : <%=datas.user_phone%> <br> 결제 상태 : <%=datas.user_pay_status%> | 텔레그램 아이디 : <%=datas.user_tel_id%> <br> 
+                권한 : <%if(datas.user_admin == 1){ %> 관리자 <% }else {%> 회원 <%}%> <br> 가입일 : <%=datas.user_regist_date%> | 
+                수신동의 : <%=datas.user_send_agree%> <br> 생일 : <%=datas.user_birth%> | <button onclick="window.location='/adminMemberEdit'"></button>
                 </div>
             </div>
             <hr>
@@ -30,9 +30,9 @@
         const accordion = document.getElementsByClassName('container');
 
         for (i=0; i<accordion.length; i++) {
-            accordion[i].addEventListener('click', function () {
-            this.classList.toggle('active')
-            })
+            accordion[i].addEventListener('click', function() {
+            this.classList.toggle('active');
+            });
         }
     </script>
 
