코드간소화 중간커밋

--- a/public/css/loginStyle.css
+++ b/public/css/loginStyle.css
@@ -13,7 +13,7 @@
 }
 */
 body {
-	background: url(backPic.jpg) no-repeat center center;/*#82b1055;*/
+	background: url(silverBack.jpg) no-repeat center center;/*#82b1055;*/
 	background-size: cover;
 	display: flex;
 	justify-content: center;
