--- a/views/adminMember.ejs
+++ b/views/adminMember.ejs
@@ -18,7 +18,7 @@
                 <div class="label"><%=datas.user_id%></div>
                 <div class="content">이름 : <%=datas.user_name%> | 휴대폰 번호 : <%=datas.user_phone%> <br> 결제 상태 : <%=datas.user_pay_status%> | 텔레그램 아이디 : <%=datas.user_tel_id%> <br> 
                 권한 : <%if(datas.user_admin == 1){ %> 관리자 <% }else {%> 회원 <%}%> <br> 가입일 : <%=datas.user_regist_date%> | 
-                수신동의 : <%=datas.user_send_agree%> <br> 생일 : <%=datas.user_birth%> | <button onclick="window.location='/adminMemberEdit'"></button>
+                수신동의 : <%=datas.user_send_agree%> <br> 생일 : <%=datas.user_birth%> | <button onclick="window.location='/adminMemberEdit'">정보 수정</button>
                 </div>
             </div>
             <hr>
