--- a/views/notice.ejs
+++ b/views/notice.ejs
@@ -16,6 +16,10 @@
                 <div class="container">
                     <div class="label"><%=notice.title%></div>
                     <div class="content"><%=notice.content%></div>
+                    <% if(isAdmin) { %>
+                    <button onclick="window.location='/editNotice'">수정</button>
+                    <button onclick="window.location='/deleteNotice'">삭제</button>
+                    <% } %>
                 </div>
                 <hr>
                 <% } %>
