관리자회원수정

--- a/public/css/noticeStyle.css
+++ b/public/css/noticeStyle.css
@@ -3,7 +3,7 @@
 /* Sets the background color of the body to blue. Sets font to Rubik */
 
 body {
-  background-color: #0A2344;
+  background-color: #1c0622;
   font-family: 'rubik', sans-serif;
 }
 
