--- a/views/adminNotice.ejs
+++ b/views/adminNotice.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>관리자 공지사항 페이지</title>
+	<title>공지사항 작성 - 관리자</title>
 	<!--로그인 폼 출처 : https://rpbloggers.com/free-download-html-css-login-form/#google_vignette -->
 	<link rel="stylesheet" type="text/css" href="/css/adminNotice.css">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
