--- a/views/error404.ejs
+++ b/views/error404.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>에러!!</title>
+    <title>404 - biBOT</title>
     <link rel="stylesheet" type="text/css" href="/css/error404.css">
     <!--html, css 출처 : https://codepen.io/ddly/-->
 </head>
