--- a/views/index.ejs
+++ b/views/index.ejs
@@ -53,7 +53,14 @@
 
     </div>
     
-
+    <footer class="sec" id="sec">
+        <p>이 웹사이트의 정보는 어떤 형태의 제공을 의미하지 않으며
+                 판매를 위한 제공 또는 구매를 위한 제공의 권유, 보증, 상품 또는 기타 금융 제품으로 해석되지 않습니다. 또한 이 웹사이트의 정보는 투자 조건의 제공을 의미하지 않습니다. 
+                 이 웹사이트에 표현 또는 암시된 모든 목적, 가정, 기대, 전략 및/또는 목표가 실현되었거나 될 것 또는 묘사한 활동 또는 성과가 이 웹사이트의 설명처럼 지속되었거나 지속될 것이라는 보증은 없습니다. 
+                <br><br>Copyright &copy; biBOT 2022 <br> 서울시 비상구 앞으로 가길 99(우주비행 빌딩), 11층 | 대표 기리보이
+                </p>
+         <br>
+    </footer>
     <script src="/js/index.js"></script>
 </body>
 
