--- a/views/signUp.ejs
+++ b/views/signUp.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>회원가입</title>
+	<title>회원가입 - biBOT</title>
 	<link rel="stylesheet" type="text/css" href="/css/loginStyle.css">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
